# void

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.cursor/skills/best-practices/: SKILL.md  rust-checklist.md
.cursor/skills/groom-dependencies/: SKILL.md
.cursor/skills/improve-tests/: SKILL.md
.cursor/skills/merge-dependabot/: SKILL.md
.cursor/skills/quality-agent/: SKILL.md
.cursor/skills/release/: SKILL.md
.cursor/skills/review-pr/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
crates/void-calendar/src/: api.rs  lib.rs
crates/void-calendar/src/connector/: attendees.rs  connector_trait.rs  events.rs  mod.rs  tests.rs  types.rs
crates/void-cli/: Cargo.toml
crates/void-cli/src/: cli.rs  context.rs  main.rs  output.rs
crates/void-cli/src/commands/: agent_inbox.rs  archive.rs  channels.rs  connector_factory.rs  contacts.rs  doctor.rs  forward.rs  gdrive.rs  googlenews.rs  hackernews.rs  hook.rs  inbox.rs  linkedin.rs  messages.rs  mod.rs  reddit.rs  reply.rs  resolve.rs  search.rs  send.rs  telegram.rs  whatsapp.rs
crates/void-cli/src/commands/calendar/: connector.rs  list.rs  mod.rs  parsing.rs
crates/void-cli/src/commands/gmail/: mod.rs
crates/void-cli/src/commands/hook/: handlers.rs
crates/void-cli/src/commands/mute/: mod.rs  resolve.rs  tests.rs
crates/void-cli/src/commands/setup/: calendar.rs  config_ui.rs  connection_menu.rs  github.rs  gmail.rs  googlenews.rs  hackernews.rs  linkedin.rs  mod.rs  slack.rs  telegram.rs  whatsapp.rs  wizard.rs
crates/void-cli/src/commands/setup/reddit/: mod.rs
crates/void-cli/src/commands/slack/: args.rs  mod.rs  saved.rs
crates/void-cli/src/commands/sync/: engine.rs
crates/void-cli/src/connectors/: calendar.rs  github.rs  gmail.rs  googlenews.rs  hackernews.rs  linkedin.rs  mod.rs  reddit.rs  slack.rs  telegram.rs  whatsapp.rs
crates/void-cli/src/service/: mod.rs  reads.rs  writes.rs
crates/void-cli/tests/: cli_contract.rs  first_run.rs  read_paths.rs
crates/void-cli/tests/snapshots/: read_paths_snapshots__inbox.snap
crates/void-core/src/: sync.rs  test_fixtures.rs
crates/void-core/src/config/: connection.rs  mod.rs  paths.rs  secure_fs.rs  tests.rs  void_config.rs
crates/void-core/src/db/: agent_inbox.rs  agent_inbox_tests.rs  database_access.rs  messages.rs  mod.rs  row.rs  schema.rs  search.rs  tests.rs
crates/void-core/src/db/messages/: archive.rs  inbox.rs  lookup.rs  mod.rs  read.rs  saved.rs  upsert.rs
crates/void-core/src/db/tests/: crud.rs  mod.rs  saved.rs
crates/void-core/src/hooks/: mod.rs  model.rs  tests.rs
crates/void-core/src/hooks/runner/: on_message.rs  schedule.rs
crates/void-core/src/models/: connector.rs  conversation.rs  health.rs  message.rs  tests.rs
crates/void-core/src/store/: mod.rs  proxy_files.rs  remote.rs
crates/void-core/src/sync/: engine.rs  tests.rs
crates/void-gdrive/src/: api.rs
crates/void-github/: Cargo.toml
crates/void-github/src/: api.rs  error.rs  lib.rs
crates/void-github/src/connector/: mod.rs  sync.rs
crates/void-gmail/src/: api.rs  auth.rs  lib.rs
crates/void-gmail/src/connector/: compose.rs  connector_trait.rs  mod.rs  sync.rs  tests.rs
crates/void-googlenews/src/: lib.rs
crates/void-googlenews/src/connector/: mod.rs  sync.rs
crates/void-hackernews/src/: lib.rs
crates/void-hackernews/src/connector/: mod.rs  sync.rs
crates/void-linkedin/src/: api.rs  lib.rs
crates/void-linkedin/src/api/: integration.rs  posts.rs
crates/void-linkedin/src/connector/: mod.rs  posts_sync.rs  send.rs  sync.rs  tests.rs
crates/void-reddit/src/: lib.rs
crates/void-reddit/src/connector/: mod.rs  sync.rs
crates/void-slack/src/: api.rs  lib.rs
crates/void-slack/src/api/: conversations.rs  tests.rs  types.rs
crates/void-slack/src/connector/: connector_trait.rs  files.rs  mapping.rs  mod.rs  socket_mode.rs  sync.rs  tests.rs
crates/void-telegram/src/: lib.rs  session.rs
crates/void-telegram/src/connector/: connector_trait.rs  media.rs  send.rs  sync.rs  tests.rs
crates/void-whatsapp/: Cargo.toml
crates/void-whatsapp/src/: lib.rs
crates/void-whatsapp/src/connector/: connector_trait.rs  media.rs  mod.rs  ops.rs  self_chat.rs  send.rs  sync.rs  tests.rs
crates/void-whatsapp/src/rpc/: client.rs  mod.rs  path.rs  protocol.rs  server.rs  tests.rs
docs/: adding-a-connector.md  commands.md  configuration.md  connectors.md  deployment.md  hooks.md  install.md  remote-store.md  testing-gaps.md  testing.md
scripts/: build-install.ps1  build-install.sh
