[workspace]
resolver = "2"
members = [
    "crates/void-cli",
    "crates/void-core",
    "crates/void-slack",
    "crates/void-gmail",
    "crates/void-calendar",
    "crates/void-whatsapp",
    "crates/void-telegram",
    "crates/void-gdrive",
    "crates/void-hackernews",
    "crates/void-linkedin",
]

[workspace.package]
version = "0.10.1"
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.89"
repository = "https://github.com/MaximeGaudin/void"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
croner = "3"
tabled = "0.17"
reqwest = { version = "0.13", features = ["json", "multipart", "form", "query"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
libc = "0.2"
html-to-markdown-rs = "3"
open = "5"
url = "2"
urlencoding = "2"
dirs = "6"
sysinfo = "0.39.3"

# Testing
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

# Internal crates
void-core = { path = "crates/void-core" }
void-slack = { path = "crates/void-slack" }
void-gmail = { path = "crates/void-gmail" }
void-calendar = { path = "crates/void-calendar" }
void-whatsapp = { path = "crates/void-whatsapp" }
void-telegram = { path = "crates/void-telegram" }
void-gdrive = { path = "crates/void-gdrive" }
void-hackernews = { path = "crates/void-hackernews" }
void-linkedin = { path = "crates/void-linkedin" }
