[package]
name = "void-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Unified communication CLI for WhatsApp, Telegram, Slack, Gmail, and Google Calendar"

[[bin]]
name = "void"
path = "src/main.rs"

[dependencies]
void-core = { workspace = true }
void-slack = { workspace = true }
void-gmail = { workspace = true }
void-calendar = { workspace = true }
void-whatsapp = { workspace = true }
void-telegram = { workspace = true }
void-gdrive = { workspace = true }
void-hackernews = { workspace = true }
void-linkedin = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }
croner = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
