[package]
name = "void-whatsapp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WhatsApp adapter for Void CLI"

[dependencies]
void-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
wa-rs = "0.2"
wa-rs-sqlite-storage = "0.2"
wa-rs-tokio-transport = "0.2"
wa-rs-ureq-http = "0.2"
wa-rs-proto = "0.2"
qr2term = "0.3"
base64 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
